# dnsimple-rust

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  RELEASING.md
.github/: CODEOWNER  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml  sync-test-fixtures.yml
src/: dnsimple.rs  errors.rs  lib.rs
src/dnsimple/: accounts.rs  certificates.rs  contacts.rs  domains.rs  domains_collaborators.rs  domains_dnssec.rs  domains_email_forwards.rs  domains_push.rs  domains_research.rs  domains_signer_records.rs  identity.rs  oauth.rs  registrar.rs  registrar_auto_renewal.rs  registrar_name_servers.rs  registrar_registrant_changes.rs  registrar_transfer_lock.rs  registrar_whois_privacy.rs  services.rs  templates.rs  tlds.rs  vanity_name_servers.rs  webhooks.rs  zones.rs  zones_records.rs
tests/: accounts_test.rs  certificates_test.rs  contacts_test.rs  domains_collaborators_test.rs  domains_dnssec_test.rs  domains_email_forwards_test.rs  domains_push_test.rs  domains_research_test.rs  domains_signer_records_test.rs  domains_test.rs  errors_tests.rs  fixtures  identity_test.rs  oauth2_test.rs  oauth_test.rs  query_parameters_in_request.rs  registrar_auto_renewal_test.rs  registrar_name_servers_test.rs  registrar_registrant_changes_test.rs  registrar_test.rs  registrar_transfer_lock_test.rs  registrar_whois_privacy_test.rs  services_test.rs  templates_test.rs  tlds_test.rs  vanity_name_servers_test.rs  webhooks_test.rs  zones_records_test.rs  zones_test.rs
tests/common/: mod.rs
tests/fixtures/v2/api/: notfound-contact.http  notfound-record.http  notfound-template.http  notfound-whoisprivacy.http  notfound-zone.http
tests/fixtures/v2/api/accounts/: success-account.http  success-user.http
tests/fixtures/v2/api/appliedServices/: success.http
tests/fixtures/v2/api/cancelDomainTransfer/: success.http
tests/fixtures/v2/api/changeDomainDelegation/: success.http
tests/fixtures/v2/api/checkDomain/: success.http
tests/fixtures/v2/api/createContact/: created.http
tests/fixtures/v2/api/createDomain/: created.http
tests/fixtures/v2/api/createEmailForward/: created.http
tests/fixtures/v2/api/createPrimaryServer/: created.http
tests/fixtures/v2/api/createSecondaryZone/: created.http
tests/fixtures/v2/api/createTemplate/: created.http
tests/fixtures/v2/api/createTemplateRecord/: created.http
tests/fixtures/v2/api/createWebhook/: created.http
tests/fixtures/v2/api/deleteEmailForward/: success.http
tests/fixtures/v2/api/disableWhoisPrivacy/: success.http
tests/fixtures/v2/api/downloadCertificate/: success.http
tests/fixtures/v2/api/enableWhoisPrivacy/: created.http  success.http
tests/fixtures/v2/api/getCertificate/: success.http
tests/fixtures/v2/api/getCertificatePrivateKey/: success.http
tests/fixtures/v2/api/getContact/: success.http
(+44 files in other folders)
