[package]
name = "dnsimple"
version = "5.1.0"
authors = ["DNSimple External Integrations Team <support@dnsimple.com>"]
edition = "2021"
description = "The DNSimple API client for Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/dnsimple/dnsimple-rust"
keywords = ["DNS", "domain", "management", "automation"]
categories = ["api-bindings"]
include = ["src/**/*.rs", "README.md", "LICENSE.txt", "CHANGELOG.md"]
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5"
mockito = "= 1.7.1"
colored = "= 3.1.1"
