[package]
name = "dnsimple"
version = "6.1.0"
authors = ["DNSimple External Integrations Team <support@dnsimple.com>"]
edition = "2024"
description = "The DNSimple API client for Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/dnsimple/dnsimple-rust"
keywords = ["DNS", "domain", "management", "automation"]
categories = ["api-bindings"]
include = ["src/**/*.rs", "README.md", "LICENSE.txt", "CHANGELOG.md"]
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls", "charset", "http2", "system-proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
assert_matches = "1.5"
mockito = "= 1.7.2"
colored = "= 3.1.1"
